wafer-space/ℹ️ - Information/⁉️-questions/inout-unsupported-error/2025-12/2025-12.txt
==============================================================
Guild: wafer.space Community
Channel: ℹ️ - Information / ⁉️-questions / InOut unsupported error
After: 2025-11-30 11:59 p.m.
Before: 2026-01-01 12:00 a.m.
==============================================================

[2025-12-15 8:52 p.m.] chvsnaveen12
Has anyone encountered this error before. My entire project is in Systemverilog.
6. Executing SLANG frontend.                                                                                                                                                                               
src/chip_core.sv:18:17: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire VDD,                                                                                                                                                                                       
                ^                                                                                                                                                                                          
src/chip_core.sv:19:17: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire VSS,                                                                                                                                                                                       
                ^                                                                                                                                                                                          
src/chip_core.sv:38:39: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire [NUM_ANALOG_PADS-1:0] analog  // Analog


[2025-12-15 9:00 p.m.] mole99
If you use slang, did you also set: `SLANG_ARGUMENTS: ['--keep-hierarchy']`?

{Reactions}
👍 (2)

==============================================================
Exported 2 message(s)
==============================================================
